trading.log
  File "/home/runner/work/arkana/arkana/main.py", line 151
    "
    ^
SyntaxError: unterminated string literal (detected at line 151)
